--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,7 @@ project(untitled)
 set(CMAKE_CXX_STANDARD 23)
 
 add_executable(untitled HelloWorld.cpp)
-add_executable("C/Hello.c")
+add_executable("C/Hello.c"
+        "C++/C++ Structure/Basic_Structure.cpp"
+        "C++/C++ Structure/Structure.cpp"
+)
